--- a/main.css
+++ b/main.css
@@ -147,3 +147,41 @@ section.player-section{
     font-weight: 700;
 }
 
+
+/* contact section */
+.contact-title{
+    text-align: center;
+    margin:2.5em 0;
+}
+.contact-title h2{
+    font-size: 1.2em;
+    margin-bottom: 1em;
+}
+label{
+    display: block;
+    font-size: 1.2em;
+    margin-bottom: .5em;
+}
+input,textarea{
+    width: 100%;
+    padding: .8em;
+    margin-bottom: 1em;
+    border-radius: 3px;
+    border: 1px solid gray;
+    box-sizing: border-box;
+}
+#cta__contact{
+    margin-bottom: 5em;
+    font-weight: 700;
+    border: none;
+    font-size: 1.3em;
+    color: white;
+    padding: .5em 1.5em;
+    display: inline-block;
+    width: unset;
+    cursor: pointer;
+}
+iframe{
+    width: 100%;
+    height: 300px;
+}
