--- a/main.css
+++ b/main.css
@@ -161,7 +161,7 @@ section.player-section{
     align-items: center;
 }
 .vs{
-    font-size: 2em;
+    font-size: 1.5em;
     font-weight: 700;
     color: var(--primary-color,#E02C6D);
     transform: translateY(-.5em);
@@ -204,4 +204,23 @@ input,textarea{
 iframe{
     width: 100%;
     height: 300px;
+}
+
+/* footer */
+footer{
+    margin-top: 3em;
+    text-align: center;
+}
+#footer-img{
+    width: 70%;
+}
+.icon-round{
+    width: 30px;
+    height: 30px;
+    background: #f6edf0;
+    color:#330918;
+    border-radius: 50%;
+    padding: .5em;
+    margin-bottom: 1.5em;
+    cursor: pointer;
 }
